--- a/login-page.html
+++ b/login-page.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;600;700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,600&family=Sora:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;600;700;800&family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,400;1,500&family=Red+Hat+Display:ital,wght@0,300;0,400;0,700;1,900&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LarPets - login</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <main>
         <div class="login-container">
@@ -32,10 +34,33 @@
                     <div class="form-element">
                         <div class="text-element">Ou</div>
                     </div>
-                    <p class="text-form">Ainda não tem uma conta? <a href="#">Cadastre-se</a></p>
+                    <p class="text-form">Ainda não tem uma conta? <a href="#" onclick="openModal()">Cadastre-se</a></p>
                 </div>
             </div>
         </div>
+
+
+        <div class="modal-window" contenteditable="false" id="modal-window">
+            <div class="modal">
+                <button class="close-modal" type="submit" id="close-modal">
+                </button>
+                <div class="modal-content">
+                    <div class="choice-area">
+                        <button class="btn-account-type-option btn-account-type-option-1">
+                        </button>
+                        <h2>Pet Sitter</h2>
+                    </div>
+                    <div class="choice-area">
+                        <button class="btn-account-type-option btn-account-type-option-2" >
+                        </button>
+                        <h2>Tutor(a)</h2>
+                    </div>
+                </div>
+                <div class="modal-text" >Escolha a modalidade da conta</div>
+            </div>
+        </div>
+        <script src="script.js"></script>
     </main>
 </body>
+
 </html>
