preparando cadastrar-pet

--- a/formularios/cadastrar-pet.html
+++ b/formularios/cadastrar-pet.html
@@ -1,4 +1,4 @@
-<form action="php/cadastrar_pet.php" method="post" enctype="multipart/form-data">
+<form action="../php/cadastrar_pet.php" method="post" enctype="multipart/form-data">
     <input type="text" name="nome" id="nome" placeholder="Nome do Pet">
     <input type="text" name="especie" id="especie" placeholder="Espécie">
     <input type="text" name="raca" id="raca" placeholder="Raça">
@@ -10,6 +10,6 @@
     <input type="date" name="data-nascimento" id="data-nascimento" placeholder="Data de Nascimento (Aprox.)">
     <input type="text" name="descricao" id="descricao" placeholder="Descrição">
     <label for="url_foto">Foto do Pet:</label>
-    <input type="file" name="url_foto" id="url_foto" accept="image/*">
+    <input type="file" name="foto" id="foto" accept="image/*">
     <input type="submit" value="Cadastrar Pet">
 </form>
