formulário + progresso no backend de petsitter

--- a/index.html
+++ b/index.html
@@ -46,13 +46,15 @@
                 </button>
                 <div class="modal-content">
                     <div class="choice-area">
-                        <button class="btn-account-type-option btn-account-type-option-1">
-                        </button>
+                        <form action="formularios/cadastrar-petsitter.html">
+                            <button class="btn-account-type-option btn-account-type-option-1"></button>
+                        </form>
                         <h2>Pet Sitter</h2>
                     </div>
                     <div class="choice-area">
-                        <button class="btn-account-type-option btn-account-type-option-2" >
-                        </button>
+                        <form action="formularios/cadastrar-tutor.html">
+                            <button class="btn-account-type-option btn-account-type-option-2"></button>
+                        </form>
                         <h2>Tutor(a)</h2>
                     </div>
                 </div>
