--- a/formularios/cadastrar-tutor.html
+++ b/formularios/cadastrar-tutor.html
@@ -3,6 +3,7 @@
     <input type="text" name="email" id="email" placeholder="E-mail">
     <input type="password" name="password" id="password" placeholder="Senha">
     <input type="text" name="phone" id="phone" placeholder="Número de Telefone">
+    <input type="text" name="address" id="address" placeholder="Endereço">
 
     <input type="submit" value="Cadastrar">
 </form>
