--- a/formularios/cadastrar-petsitter.html
+++ b/formularios/cadastrar-petsitter.html
@@ -1,10 +1,47 @@
-<form action="../php/cadastrar_petsitter.php" method="post">
-    <input type="text" name="name" id="name" placeholder="Nome">
-    <input type="text" name="email" id="email" placeholder="E-mail">
-    <input type="password" name="password" id="password" placeholder="Senha">
-    <input type="text" name="phone" id="phone" placeholder="Número de Telefone">
-    <input type="text" name="cpf" id="cpf" placeholder="CPF">
-    <input type="text" name="rg" id="rg" placeholder="RG">
-    <input type="text" name="address" id="address" placeholder="Endereço">
-    <input type="submit" value="Cadastrar">
-</form>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/configuracoes.css">
+    <title>Larpets | Cadastrar Petsitter</title>
+</head>
+
+<body>
+    <header>
+        <img src="../img/larpets-black-icon.svg">
+    </header>
+
+    <section class="main-content">
+            <h2>Cadastro</h2>
+            <form action="../php/cadastrar_petsitter.php" method="post">
+                <label for="name">Nome:</label>
+                <input type="text" id="name" name="name" placeholder="Seu nome" required>
+
+                <label for="email">E-mail:</label>
+                <input type="text" id="email" name="email" placeholder="Seu e-mail" required>
+
+                <label for="password">Nova Senha:</label>
+                <input type="password" id="password" name="password" placeholder="Sua senha" required>
+
+                <label for="phone">Telefone:</label>
+                <input type="text" id="phone" name="phone" placeholder="Seu nº de telefone" required>
+
+                <label for="cpf">CPF:</label>
+                <input type="text" id="cpf" name="cpf" placeholder="Seu CPF" required>
+
+                <label for="rg">RG:</label>
+                <input type="text" id="rg" name="rg" placeholder="Seu RG" required>
+
+                <label for='address'>Novo Endereço:</label>
+                <input type='text' id='address' name='address' placeholder='Seu endereço' required>
+
+                <button type="submit">Cadastrar</button>
+            </form>
+    </section>
+
+    <footer>
+        <p>&copy; 2023 Larpets</p>
+    </footer>
+</body>
+
