--- a/formularios/cadastrar-petsitter.html
+++ b/formularios/cadastrar-petsitter.html
@@ -21,7 +21,7 @@
                 <label for="email">E-mail:</label>
                 <input type="text" id="email" name="email" placeholder="Seu e-mail" required>
 
-                <label for="password">Nova Senha:</label>
+                <label for="password">Senha:</label>
                 <input type="password" id="password" name="password" placeholder="Sua senha" required>
 
                 <label for="phone">Telefone:</label>
